# ChatGPT-test

./: CMakeLists.txt  README.md
docs/: architecture.md
include/: app.h  bvh.h  math3d.h  scene.h  software_rt.h  vulkan_rt.h
shaders/: compute_fallback.slang  raytracing.slang
src/: app.c  bvh.c  main.c  scene.c  software_rt.c  vulkan_rt.c
